--- a/Day3/Untargeted_metabolomics_DM.html
+++ b/Day3/Untargeted_metabolomics_DM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Untargeted Metabollmics Data Matrix</title>
+  <title>Untargeted Metabolomics Data Matrix</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -19,7 +19,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Untargeted Metabollmics Data Matrix',
+                title: 'Untargeted Metabolomics Data Matrix',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -3105,6 +3105,13 @@ slide:not(.current) .plotly.html-widget{
   display: block;
 }
 
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    span.underline{text-decoration: underline;}
+    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    ul.task-list{list-style: none;}
+            
   </style>
 
 
