--- a/README.html
+++ b/README.html
@@ -443,7 +443,7 @@ summary {
 <li><a href="Day3/Untargeted_metabolomics_DM.html">Untargeted metbolomics data matrix</a></li>
 <li><a href="Day3/from_rawdata_to_DM.html">Creating a data matrix in xcms from raw LC-MSdata</a>
 <ul>
-<li>Practical: <a href="Day3/faahko.html">html</a>, <a href="Day3/faahko.Rmd">Rmd</a></li>
+<li>Practical: <a href="Day3/faahKO.html">html</a>, <a href="Day3/faahKO.Rmd">Rmd</a></li>
 </ul></li>
 <li>Feature Filtering and quality assessment</li>
 <li>Some words on annotation</li>
