--- a/Day1/experimental_design.html
+++ b/Day1/experimental_design.html
@@ -9,7 +9,6 @@
 
 
 
-  <meta name="date" content="2020-11-30" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3128,7 +3127,6 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">11/30/2020</p>
           </hgroup>
   </slide>
 
@@ -3144,14 +3142,13 @@ slides > slide {
   color: blue;
 }
 
-
 del {
   color: red;
   text-decoration: none;
 }
 
 strong {
-  color: black;
+  color: #404040;
 }
 
 </style>
@@ -3161,14 +3158,14 @@ strong {
 <p><strong>Statistics</strong> is the science which deals with <strong>the collection, the analysis, the visualization and the interpretation</strong> of experimental data</p>
 
 <ul>
-<li>random samplings</li>
+<li>random sampling</li>
 <li>observational studies</li>
 <li>experiments</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Random Samplings (polls)</h2></hgroup><article  id="random-samplings-polls">
 
-<p>Random samplings allow to characterize the properties of a finite population without measuring all of its members</p>
+<p>Random sapling allow to characterize the properties of a finite population without measuring all of its members</p>
 
 <p><strong>Examples</strong></p>
 
@@ -3225,7 +3222,7 @@ strong {
 </li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  id="mind-the-chocolate" class="flexbox vcenter">
+</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  class="flexbox vcenter" id="mind-the-chocolate">
 
 <div class="centered">
 
@@ -3281,7 +3278,7 @@ strong {
 <p>In statistics, a confounder (also confounding variable, confounding factor, or lurking variable) is a variable that influences both the dependent variable and independent variable, causing a spurious association. Confounding is a causal concept, and as such, cannot be described in terms of correlations or associations. (<em>wikipedia</em>)</p>
 
 <ul>
-<li>Smoke, cardiovascuar disease, alchool consumption</li>
+<li>Smoke, cardiovascular disease, alcohol consumption</li>
 <li>Birth order (1st child, 2nd child, etc.), presence of Down Syndrome in the child, maternal age</li>
 </ul>
 
@@ -3310,9 +3307,9 @@ strong {
 </article></slide><slide class=""><hgroup><h2>Key idea #3: Blocking</h2></hgroup><article  id="key-idea-3-blocking">
 
 <ul>
-<li>Group experimental units in homogeneous groups (bloks)</li>
+<li>Group experimental units in homogeneous groups (blocks)</li>
 <li>Study the variability inside the blocks</li>
-<li>Identify and subtract the variability across the bloks</li>
+<li>Identify and subtract the variability across the books</li>
 <li>ANOVA!</li>
 </ul>
 
