--- a/README.html
+++ b/README.html
@@ -418,28 +418,22 @@ summary {
 <div id="day-one" class="section level2">
 <h2>Day One</h2>
 <ul>
-<li>What is Metabolomics
-<ul>
-<li>Analytical Technologies in metabolomics</li>
-</ul></li>
-<li><a href>My R toolbox</a>, <a href>Rmd</a></li>
+<li><a href="Day1/Metabolomics.html">What is Metabolomics</a></li>
+<li><a href="Day1/Our_R_cheatsheet.html">Our R cheatsheet</a> - <a href="Day1/Our_R_cheatsheet.Rmd">Rmd</a></li>
 <li><a href="Day1/experimental_design.html">Experimental design</a>
 <ul>
 <li>Practical: <a href="Day1/stratified_random_sampling.html">html</a>, <a href="Day1/stratified_random_sampling.Rmd">Rmd</a></li>
 </ul></li>
-<li>Group Activity: design your study</li>
+<li><a href="Day1/Group_activity_study_design.html">Group Activity: design your study</a></li>
 <li><a href="Day1/Metabolomics_data_matrix.html">Data analysis in metabolomics</a></li>
-<li><a href="Day1/False_Positives.html">Fat data matrices and false positives</a>, <a href="Day1/False_Positives.Rmd">Rmd</a></li>
+<li><a href="Day1/False_Positives.html">Fat data matrices and false positives</a> - <a href="Day1/False_Positives.Rmd">Rmd</a></li>
 <li><a href="Day1/statisticaltesting_and_effectsize.html">Statistical testing and effect size</a></li>
 </ul>
 </div>
 <div id="day-two" class="section level2">
 <h2>Day Two</h2>
 <ul>
-<li>A targeted metabolomics data matrix
-<ul>
-<li>Practical: <a href>html</a>, <a href>Rmd</a></li>
-</ul></li>
+<li><a href="Day2/wrangling_targeted_DM.html">Wrangling a targeted metabolomics data matrix</a> - <a href="Day2/wrangling_targeted_DM.Rmd">Rmd</a></li>
 <li><a href="Day2/MissingValues.html">Missing values and imputation</a></li>
 <li><a href="Day2/Variable_distribution.html">Data distribution</a></li>
 <li><a href="Day2/PCA.html">Multivariate visualization: PCA</a></li>
@@ -461,10 +455,13 @@ summary {
 <div id="day-four" class="section level2">
 <h2>Day Four</h2>
 <ul>
-<li>Biomarker discovery: the univariate way.</li>
+<li>Biomarker discovery: the univariate way</li>
 <li>False discoveries, and multiple testing</li>
-<li>Machine Learning for Dummies</li>
-<li>Random Forest - Variable selection</li>
+<li><a href="Day4/ML_intro.html">Machine Learning for Dummies</a></li>
+<li><a href="Day4/Decision-Trees_and_RandomForest.html">Decision Trees and Random Forest</a>
+<ul>
+<li>Practical: <a href="Day4/Random_Forest_in_practice.html">html</a>, <a href="Day4/Random_Forest_in_practice.Rmd">Rmd</a></li>
+</ul></li>
 </ul>
 </div>
 </div>
