--- a/Day1/Metabolomics.html
+++ b/Day1/Metabolomics.html
@@ -3355,7 +3355,24 @@ strong {
 
 <p><em>e.g. how to sample in a representative way in GC? How to quench the metabolism of microorganisms? how to store biofluids?</em></p>
 
-</article></slide><slide class=""><hgroup><h2>Key Elements to design a succesfull metabolomics</h2></hgroup><article  id="key-elements-to-design-a-succesfull-metabolomics" class="build">
+</article></slide><slide class=""><hgroup><h2>Statistical Validation</h2></hgroup><article  id="statistical-validation" class="build">
+
+<ol class = 'build'>
+<li>Unfavorable variables-to-samples ratio</li>
+<li>Unexpected subpopulations</li>
+<li>not always easy to place the results inside the established body of knowledge</li>
+</ol>
+
+<hr>
+
+<p><strong><del>Two stage design:</del></strong></p>
+
+<ol>
+<li>hypothesis generation;</li>
+<li>validation</li>
+</ol>
+
+</article></slide><slide class=""><hgroup><h2>Key Elements to design a succesfull metabolomics</h2></hgroup><article  id="key-elements-to-design-a-succesfull-metabolomics" class="build smaller">
 
 <h3>1 - Planning</h3>
 
