--- a/Day1/Metabolomics.html
+++ b/Day1/Metabolomics.html
@@ -3159,7 +3159,7 @@ strong {
 
 <p>The pool of these molecules is known as <del>metabolome</del>.</p>
 
-<p>Metabolomics aims at measuring the metabolites in a ~~quantitative]] way and to characterize their relations and associations.</p>
+<p>Metabolomics aims at measuring the metabolites in a <del>quantitative</del> way and to characterize their relations and associations.</p>
 
 </article></slide><slide class=""><hgroup><h2>Why Metabolomics</h2></hgroup><article  id="why-metabolomics">
 
