--- a/Day1/experimental_design.html
+++ b/Day1/experimental_design.html
@@ -3222,7 +3222,7 @@ strong {
 </li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  class="flexbox vcenter" id="mind-the-chocolate">
+</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  id="mind-the-chocolate" class="flexbox vcenter">
 
 <div class="centered">
 
@@ -3259,7 +3259,9 @@ strong {
 
 </article></slide><slide class=""><hgroup><h2>Planning an observational study</h2></hgroup><article  id="planning-an-observational-study">
 
-<p><strong>Objective</strong>: get a useful and clear answer <strong>Mean</strong>: start from a clear, useful and often simple question</p>
+<p><strong>Objective</strong>: get a useful and clear answer</p>
+
+<p><strong>Mean</strong>: start from a clear, useful and often simple question</p>
 
 <ul>
 <li>Identify the <strong>sampling unit</strong></li>
@@ -3288,7 +3290,9 @@ strong {
 
 </article></slide><slide class=""><hgroup><h2>Planning one experiment</h2></hgroup><article  id="planning-one-experiment">
 
-<p><strong>Objective</strong>: get a useful and clear answer <strong>Mean</strong>: start from a clear, useful and often simple question</p>
+<p><strong>Objective</strong>: get a useful and clear answer</p>
+
+<p><strong>Mean</strong>: start from a clear, useful and often simple question</p>
 
 <ul>
 <li>What is my experimental unit?</li>
@@ -3321,12 +3325,7 @@ strong {
 
 <p><strong>Block what you can; randomize what you cannot.</strong></p>
 
-<div class="red2">
-
-<em>Blocking is better than randomizing because it is possible to &ldquo;subtract&rdquo; the variability between the blocks</em>
-
-<div>
-
+<p><em>~~Blocking is better than randomization because it is possible to &ldquo;subtract&rdquo; the variability between the blocks]]</em></p>
 
 <hr>
 
