--- a/README.html
+++ b/README.html
@@ -433,7 +433,11 @@ summary {
 <div id="day-two" class="section level2">
 <h2>Day Two</h2>
 <ul>
-<li><a href="Day2/wrangling_targeted_DM.html">Wrangling a targeted metabolomics data matrix</a> - <a href="Day2/wrangling_targeted_DM.Rmd">Rmd</a></li>
+<li><a href="Day2/wrangling_targeted_DM.html">Wrangling a targeted metabolomics data matrix</a> - <a href="Day2/wrangling_targeted_DM.Rmd">Rmd</a>
+<ul>
+<li><a href="Day2/KOMP_data_targeted.RData">KOMP data</a></li>
+<li><a href="Day2/rubus_targeted.csv">Rubus data</a></li>
+</ul></li>
 <li><a href="Day2/MissingValues.html">Missing values and imputation</a></li>
 <li><a href="Day2/Variable_distribution.html">Data distribution</a></li>
 <li><a href="Day2/PCA.html">Multivariate visualization: PCA</a></li>
@@ -448,8 +452,8 @@ summary {
 <ul>
 <li>Practical: <a href="Day3/faahKO.html">html</a>, <a href="Day3/faahKO.Rmd">Rmd</a></li>
 </ul></li>
-<li>Feature Filtering and quality assessment</li>
-<li>Some words on annotation</li>
+<li><a href="Day3/annotation.html">Some words on annotation</a></li>
+<li><a href="Day3/software_resources_for_preprocessing.html">SW resources for preprocessing</a></li>
 </ul>
 </div>
 <div id="day-four" class="section level2">
