--- a/Day3/annotation.html
+++ b/Day3/annotation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Experimental Design</title>
+  <title>Annotation</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -19,7 +19,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Experimental Design',
+                title: 'Annotation',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
