--- a/Day3/software_resources_for_preprocessing.html
+++ b/Day3/software_resources_for_preprocessing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Software Resources For Preprocessing (also)</title>
+  <title>Software Resources (also) For Preprocessing</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -19,7 +19,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Software Resources For Preprocessing (also)',
+                title: 'Software Resources (also) For Preprocessing',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
