--- a/Day1/Group_activity_study_design.html
+++ b/Day1/Group_activity_study_design.html
@@ -95,6 +95,7 @@ slide:not(.current) .plotly.html-widget{
             
   </style>
 
+  <link rel="stylesheet" href="data:text/css,slides%20%3E%20slide%20%7B%0Abackground%3A%20linear%2Dgradient%28%23ffffff%2C%20%23ffffff%2085%25%2C%20%23ffffff%29%3B%0Abackground%2Dcolor%3A%20white%3B%0A%7D%0A%23notes%20%7B%0Acolor%3A%20%23377eb8%3B%0A%7D%0A%23highlights%20%7B%0Acolor%3A%20%23e41a1c%3B%0A%7D%0Adel%20%7B%0Acolor%3A%20%23e41a1c%3B%0Atext%2Ddecoration%3A%20none%3B%0A%7D%0Astrong%20%7B%0Acolor%3A%20%23377eb8%3B%0A%3C%3C%3C%3C%3C%3C%3C%20HEAD%0A%7D%0A%3D%3D%3D%3D%3D%3D%3D%0A%7D%0A%3E%3E%3E%3E%3E%3E%3E%20bd1cd0e1b3e52af2a809aadbd7ecf825f8dcee26%0A" type="text/css" />
 
 </head>
 
@@ -111,29 +112,6 @@ slide:not(.current) .plotly.html-widget{
           </hgroup>
   </slide>
 
-<style type="text/css">
-
-slides > slide {
-  background: linear-gradient(#ffffff, #ffffff 85%, #ffffff);
-  background-color: white;
-}
-
-
-#notes {
-  color: blue;
-}
-
-del {
-  color: red;
-  text-decoration: none;
-}
-
-strong {
-  color: #404040;
-}
-
-</style>
-
 <slide class=""><hgroup><h2>Design your Study</h2></hgroup><article  id="design-your-study">
 
 <ul>
@@ -148,15 +126,15 @@ strong {
 
 </article></slide><slide class=""><hgroup><h2>Scenario 1</h2></hgroup><article  id="scenario-1">
 
-<p>We would like to present a research project for a forthcoming EU call with the objective of studying what are the effects of global warming and pollution (zinc concentration) on the metabolism of the mediterranean mussel (<em>Mytilus galloprovincialis</em>)</p>
+<p>We would like to present a research project for a forthcoming EU call with the objective of studying what are the effects of global warming and pollution (zinc concentration) on the metabolism of the Mediterranean mussel (<em>Mytilus galloprovincialis</em>)</p>
 
 </article></slide><slide class=""><hgroup><h2>Scenario 2</h2></hgroup><article  id="scenario-2">
 
-<p>Our research institute is interested in developing new varieties of grapevine, which are able to better withstand <em>Plasmopara viticola</em> infection. The reduction of the use of chemicals is indeed one of the priorities of the new european regulations. Our colleagues has been setting up an extensive breeding program, but we would like to use metabolomics to perform an early screening of the potential genetic traits which are responsible of the resistance.</p>
+<p>Our research institute is interested in developing new varieties of grapevine, which are able to better withstand <em>Plasmopara viticola</em> infection. The reduction of the use of chemicals is indeed one of the priorities of the new European regulations. Our colleagues has been setting up an extensive breeding program, but we would like to use metabolomics to perform an early screening of the potential genetic traits which are responsible of the resistance.</p>
 
 </article></slide><slide class=""><hgroup><h2>Scenario 3</h2></hgroup><article  id="scenario-3">
 
-<p>After hundreds of years, we would like to finally give a scientific support to the old belief that &ldquo;eating carrots improves vision&rdquo;. Metabolomics could definitively help, both in the characterization of the carrots and in their effects on humans …</p></article></slide>
+<p>After hundreds of years, we would like to finally give a scientific support to the old belief that &ldquo;An apple a day keeps the doctor away&rdquo;. Metabolomics could definitively help, both in the characterization of the apples and in their effects on humans …</p></article></slide>
 
 
   <slide class="backdrop"></slide>
