--- a/Day1/experimental_design.html
+++ b/Day1/experimental_design.html
@@ -95,6 +95,7 @@ slide:not(.current) .plotly.html-widget{
             
   </style>
 
+  <link rel="stylesheet" href="data:text/css,slides%20%3E%20slide%20%7B%0Abackground%3A%20linear%2Dgradient%28%23ffffff%2C%20%23ffffff%2085%25%2C%20%23ffffff%29%3B%0Abackground%2Dcolor%3A%20white%3B%0A%7D%0A%23notes%20%7B%0Acolor%3A%20%23377eb8%3B%0A%7D%0A%23highlights%20%7B%0Acolor%3A%20%23e41a1c%3B%0A%7D%0Adel%20%7B%0Acolor%3A%20%23e41a1c%3B%0Atext%2Ddecoration%3A%20none%3B%0A%7D%0Astrong%20%7B%0Acolor%3A%20%23377eb8%3B%0A%3C%3C%3C%3C%3C%3C%3C%20HEAD%0A%7D%0A%3D%3D%3D%3D%3D%3D%3D%0A%7D%0A%3E%3E%3E%3E%3E%3E%3E%20bd1cd0e1b3e52af2a809aadbd7ecf825f8dcee26%0A" type="text/css" />
 
 </head>
 
@@ -110,29 +111,6 @@ slide:not(.current) .plotly.html-widget{
       <p data-config-presenter><!-- populated from slide_config.json --></p>
           </hgroup>
   </slide>
-
-<style type="text/css">
-
-slides > slide {
-  background: linear-gradient(#ffffff, #ffffff 85%, #ffffff);
-  background-color: white;
-}
-
-
-#notes {
-  color: blue;
-}
-
-del {
-  color: red;
-  text-decoration: none;
-}
-
-strong {
-  color: #404040;
-}
-
-</style>
 
 <slide class=""><hgroup><h2>Statistics</h2></hgroup><article  id="statistics">
 
