--- a/Day2/MissingValues.html
+++ b/Day2/MissingValues.html
@@ -95,12 +95,7 @@ slide:not(.current) .plotly.html-widget{
             
   </style>
 
-<<<<<<< HEAD
-  <link rel="stylesheet" href="data:text/css,slides%20%3E%20slide%20%7B%0Abackground%3A%20linear%2Dgradient%28%23ffffff%2C%20%23ffffff%2085%25%2C%20%23ffffff%29%3B%0Abackground%2Dcolor%3A%20white%3B%0A%7D%0A%23notes%20%7B%0Acolor%3A%20%23377eb8%3B%0A%7D%0A%23highlights%20%7B%0Acolor%3A%20%23e41a1c%3B%0A%7D%0Adel%20%7B%0Acolor%3A%20%23e41a1c%3B%0Atext%2Ddecoration%3A%20none%3B%0A%7D%0Astrong%20%7B%0Acolor%3A%20%23377eb8%3B%0A%7D%0A" type="text/css" />
-=======
-
-  <link rel="stylesheet" href="data:text/css,slides%20%3E%20slide%20%7B%0Abackground%3A%20linear%2Dgradient%28%23ffffff%2C%20%23ffffff%2085%25%2C%20%23ffffff%29%3B%0Abackground%2Dcolor%3A%20white%3B%0A%7D%0A%23notes%20%7B%0Acolor%3A%20%234682b4%3B%0A%7D%0Adel%20%7B%0Acolor%3A%20%23cb4154%3B%0Atext%2Ddecoration%3A%20none%3B%0A%7D%0Astrong%20%7B%0Acolor%3A%20%23404040%3B%0A%7D%0A" type="text/css" />
->>>>>>> bd1cd0e1b3e52af2a809aadbd7ecf825f8dcee26
+  <link rel="stylesheet" href="data:text/css,slides%20%3E%20slide%20%7B%0Abackground%3A%20linear%2Dgradient%28%23ffffff%2C%20%23ffffff%2085%25%2C%20%23ffffff%29%3B%0Abackground%2Dcolor%3A%20white%3B%0A%7D%0A%23notes%20%7B%0Acolor%3A%20%23377eb8%3B%0A%7D%0A%23highlights%20%7B%0Acolor%3A%20%23e41a1c%3B%0A%7D%0Adel%20%7B%0Acolor%3A%20%23e41a1c%3B%0Atext%2Ddecoration%3A%20none%3B%0A%7D%0Astrong%20%7B%0Acolor%3A%20%23377eb8%3B%0A%3C%3C%3C%3C%3C%3C%3C%20HEAD%0A%7D%0A%3D%3D%3D%3D%3D%3D%3D%0A%7D%0A%3E%3E%3E%3E%3E%3E%3E%20bd1cd0e1b3e52af2a809aadbd7ecf825f8dcee26%0A" type="text/css" />
 
 </head>
 
