--- a/Day3/from_rawdata_to_DM.html
+++ b/Day3/from_rawdata_to_DM.html
@@ -120,7 +120,7 @@ slide:not(.current) .plotly.html-widget{
 <li>The peaks of the same compounds are slightly shifted in the different samples</li>
 </ol>
 
-</article></slide><slide class=""><hgroup><h2>Fragmentation</h2></hgroup><article  id="fragmentation" class="smaller">
+</article></slide><slide class=""><hgroup><h2>Fragmentation</h2></hgroup><article  class="smaller" id="fragmentation">
 
 <p>During ionization chemical structures <del>fragment</del> in different ions</p>
 
@@ -128,7 +128,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>A metabolite <strong>produce several peaks on the mz-rt plane</strong></p>
 
-</article></slide><slide class=""><hgroup><h2>Extracted Ion Traces</h2></hgroup><article  id="extracted-ion-traces" class="smaller">
+</article></slide><slide class=""><hgroup><h2>Extracted Ion Traces</h2></hgroup><article  class="smaller" id="extracted-ion-traces">
 
 <p>The chromatograms of the ions coming from the same metabolite are locally correlated</p>
 
@@ -179,7 +179,7 @@ slide:not(.current) .plotly.html-widget{
 <li>The <del>efficiency of the spectrometer degrades with time</del> (the instrument gets dirty)</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>0. Get the raw data</h2></hgroup><article  id="get-the-raw-data" class="smaller">
+</article></slide><slide class=""><hgroup><h2>0. Get the raw data</h2></hgroup><article  class="smaller" id="get-the-raw-data">
 
 <p>Raw LC/Gc-MS are saved in <strong>proprietary</strong> format by the acquisition equipment (Bruker, Agilent, Thermo, Waters, …).</p>
 
@@ -328,7 +328,7 @@ slide:not(.current) .plotly.html-widget{
 <li>compound missing in one or more samples</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Imputation</h2></hgroup><article  id="imputation" class="smaller">
+</article></slide><slide class=""><hgroup><h2>Imputation</h2></hgroup><article  class="smaller" id="imputation">
 
 <ul>
 <li>Remove the features with too many NAs</li>
