--- a/Day3/Untargeted_metabolomics_DM.html
+++ b/Day3/Untargeted_metabolomics_DM.html
@@ -122,7 +122,7 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>LC/GC MS</h2></hgroup><article  id="lcgc-ms">
 
-<p><strong>TWO dimensional data</strong></p>
+<p><strong>THREE dimensional data</strong></p>
 
 <ol>
 <li>Neutral molecules are separated &ldquo;in time&rdquo; on the bases of their chemical properties</li>
