add grape analysis

--- a/Day1/experimental_design.html
+++ b/Day1/experimental_design.html
@@ -181,7 +181,7 @@ slide:not(.current) .plotly.html-widget{
 </li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  class="flexbox vcenter" id="mind-the-chocolate">
+</article></slide><slide class=""><hgroup><h2>Mind the chocolate …</h2></hgroup><article  id="mind-the-chocolate" class="flexbox vcenter">
 
 <div class="centered">
 
