--- a/Day1/Metabolomics.html
+++ b/Day1/Metabolomics.html
@@ -3195,9 +3195,15 @@ color: #377eb8;
 
 <p>Some of the metabolite are present in high concentration, while other highly relevant compounds are present only in small traces. Our analytical method should be able to <del>see them at the same time</del></p>
 
+</article></slide><slide class=""><hgroup><h2>Challenges of Metabolomics cont …</h2></hgroup><article  id="challenges-of-metabolomics-cont" class="smaller build">
+
 <h3>4. - <del>Coverage</del></h3>
 
 <p>The chemical diversity makes extremely difficult to have only <strong>one</strong> analytical method able to analyze everything</p>
+
+<h3>5. - <del>Pre analytics</del></h3>
+
+<p>The approach is so sensitive that every un reproducible pre-analytical issue will affect the data</p>
 
 </article></slide><slide class=""><hgroup><h2>How Metabolomics</h2></hgroup><article  id="how-metabolomics">
 
@@ -3262,7 +3268,11 @@ color: #377eb8;
 
 <p>In metabolomics we are loading on the instruments a complex mixture of chemicals. This complex chemical environment will affect the <em>response</em> of the molecules in an often unpredictable way. The importance of this effect is so strong in MS that this technique is almost always coupled with chromatography</p>
 
-<p>With chromatography the differnt molecules reach the ionization source at different times, reducing the matrix effect</p>
+<p>With chromatography the different molecules reach the ionization source at different times, reducing the matrix effect.</p>
+
+<h3>3 - Sample handling</h3>
+
+<p>The approach is so powerful that all aspect related to sample handling/storage/extraction will affect the final result</p>
 
 </article></slide><slide class=""><hgroup><h2>NMR vs LC/GC MS</h2></hgroup><article  id="nmr-vs-lcgc-ms" class="build">
 
@@ -3295,11 +3305,15 @@ color: #377eb8;
 
 <p><del>The measured variables are metabolites</del></p>
 
+<p>The numbers we collect is the concentration of the individual metabolites</p>
+
 <h3>Untargeted</h3>
 
 <p>We &ldquo;throw&rdquo; a raw extract in our instrument, trying to analyze as much signals as possible. How many things we are able to see is unknown.</p>
 
 <p><del>The measured variables are <strong>not</strong> metabolites</del></p>
+
+<p>The numbers we get are the peak areas of the individual features</p>
 
 </article></slide><slide class=""><hgroup><h2>Why targeted, why untargeted</h2></hgroup><article  id="why-targeted-why-untargeted" class="smaller build">
 
@@ -3346,7 +3360,7 @@ color: #377eb8;
 
 </article></slide><slide class=""><hgroup><h2>Annotation in Untargeted Metabolomics</h2></hgroup><article  id="annotation-in-untargeted-metabolomics">
 
-<p>As you have already understood, in untargeted metabolomics</p>
+<p>As you have already understood, in untargeted metabolomics:</p>
 
 <ul>
 <li>We do not measure the concentration of metabolites</li>
@@ -3363,7 +3377,7 @@ color: #377eb8;
 <li>In house db of standards</li>
 <li>On-line db of standards</li>
 <li>Chemoinformatics</li>
-<li>ML (prediction of chemical structures from spectra )</li>
+<li>ML (prediction of chemical structures from spectra)</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Sampling and sample handling</h2></hgroup><article  id="sampling-and-sample-handling" class="build">
@@ -3396,6 +3410,12 @@ color: #377eb8;
 <li>Hypothesis generation</li>
 <li>Validation</li>
 </ol>
+
+</article></slide><slide class=""><hgroup><h2>Domain Specific Validation</h2></hgroup><article  id="domain-specific-validation">
+
+<p>Are my results fitting inside the established (domain specific) body of knowledge?</p>
+
+<p><em>e.g. Are my markers reasonable under the light of the human metabolism?</em></p>
 
 </article></slide><slide class=""><hgroup><h2>Key Elements to design a succesfull metabolomics investigation</h2></hgroup><article  id="key-elements-to-design-a-succesfull-metabolomics-investigation" class="build smaller">
 
