bugfixes on D1 html

--- a/Day1/Metabolomics.html
+++ b/Day1/Metabolomics.html
@@ -3264,13 +3264,15 @@ color: #377eb8;
 
 <p>When chromatographic separation is present, elution times will slightly change from run to run. For GC the situation is better, but far from being perfect</p>
 
+</article></slide><slide class=""><hgroup><h2>Sources of Analytical Variability</h2></hgroup><article  id="sources-of-analytical-variability-1" class="smaller">
+
 <h3>3 - Matrix effects</h3>
 
 <p>In metabolomics we are loading on the instruments a complex mixture of chemicals. This complex chemical environment will affect the <em>response</em> of the molecules in an often unpredictable way. The importance of this effect is so strong in MS that this technique is almost always coupled with chromatography</p>
 
 <p>With chromatography the different molecules reach the ionization source at different times, reducing the matrix effect.</p>
 
-<h3>3 - Sample handling</h3>
+<h3>4 - Sample handling</h3>
 
 <p>The approach is so powerful that all aspect related to sample handling/storage/extraction will affect the final result</p>
 
