--- a/Day1/Metabolomics.html
+++ b/Day1/Metabolomics.html
@@ -3185,35 +3185,35 @@ color: #377eb8;
 
 <h3>1 - <del>Size</del> of the metabolic chemical space</h3>
 
-<p>The molecules included in the metabolome can be extremely diverse in particular if plants/microorganisms are concerned</p>
+<p>The molecules included in the metabolome can be extremely diverse in particular if plants/microorganisms are concerned.</p>
 
 <h3>2 - Diversity in the <del>chemical properties</del> of the metabolites</h3>
 
-<p>The chemical diversity results in different properties which would require different methods of analysis</p>
+<p>The chemical diversity results in different properties which would require different methods of analysis.</p>
 
 <h3>3 - Huge differences in <del>concentrations</del></h3>
 
-<p>Some of the metabolite are present in high concentration, while other highly relevant compounds are present only in small traces. Our analytical method should be able to <del>see them at the same time</del></p>
+<p>Some of the metabolite are present in high concentration, while other highly relevant compounds are present only in small traces. Our analytical method should be able to <del>see them at the same time</del>.</p>
 
 </article></slide><slide class=""><hgroup><h2>Challenges of Metabolomics cont …</h2></hgroup><article  id="challenges-of-metabolomics-cont" class="smaller build">
 
 <h3>4. - <del>Coverage</del></h3>
 
-<p>The chemical diversity makes extremely difficult to have only <strong>one</strong> analytical method able to analyze everything</p>
+<p>The chemical diversity makes extremely difficult to have only <strong>one</strong> analytical method able to analyze everything.</p>
 
 <h3>5. - <del>Pre analytics</del></h3>
 
-<p>The approach is so sensitive that every un reproducible pre-analytical issue will affect the data</p>
+<p>The approach is so sensitive that every un reproducible pre-analytical issue will affect the data.</p>
 
 </article></slide><slide class=""><hgroup><h2>How Metabolomics</h2></hgroup><article  id="how-metabolomics">
 
 <p>We need an analytic technique:</p>
 
 <ol class = 'build'>
-<li>Sensitive to the <strong>chemical structure</strong></li>
-<li><strong>Universal</strong> - able to see almost all classes of molecules</li>
-<li><strong>Sensitive</strong> - able to see metabolites with low concentrations</li>
-<li>With an high <strong>dynamic range</strong> - able to measure at the same time low and high abundant compounds</li>
+<li>Sensitive to the <strong>chemical structure</strong>.</li>
+<li><strong>Universal</strong> - able to see almost all classes of molecules.</li>
+<li><strong>Sensitive</strong> - able to see metabolites with low concentrations.</li>
+<li>With an high <strong>dynamic range</strong> - able to measure at the same time low and high abundant compounds.</li>
 </ol>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Analytical Techniques in Metabolomics</h2></hgroup><article  id="analytical-techniques-in-metabolomics">
@@ -3244,15 +3244,18 @@ color: #377eb8;
 
 </article></slide><slide class=""><hgroup><h2>Molecules and features</h2></hgroup><article  id="molecules-and-features-1">
 
-<p>In all the techniques presented so far, <del>each metabolite</del> give rise to a large set of <del>different signals</del></p>
+<p>In all the techniques presented so far, <del>each metabolite</del> give rise to a large set of <del>different signals</del>:</p>
 
 <ul>
-<li><strong>MS</strong> - the different ions produced in the ionization of the metabolite</li>
-<li><strong>NMR</strong> - the different peaks coming from the resonance of the nuclei present in the molecule</li>
-<li><strong>LC/GC-MS</strong> - the different ions which are eluted at different time. These mz/rt couples are called <em>features</em></li>
+<li><strong>MS</strong> - the different ions produced in the ionization of the metabolite.</li>
+<li><strong>NMR</strong> - the different peaks coming from the resonance of the nuclei present in the molecule.</li>
+<li><strong>LC/GC-MS</strong> - the different ions which are eluting at different time. These mz/rt couples are called <em>features</em></li>
 </ul>
 
-<p>All the variables coming from the same molecule are <del>highly correlated</del></p>
+<p><br><br></p>
+
+<div style="border: 2px solid #e74c3c; background-color: #fdecea; padding: 10px; border-radius: 5px;">
+<p>⚠️ <strong>Warning:</strong> All the variables coming from the same molecule are <del>highly correlated</del>.</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Sources of Analytical Variability</h2></hgroup><article  id="sources-of-analytical-variability" class="smaller">
 
@@ -3281,20 +3284,20 @@ color: #377eb8;
 <h3>NMR</h3>
 
 <ol class = 'build'>
-<li>:-) Reproducible</li>
-<li>:-) Inherently quantitative</li>
-<li>:-) Sensitive to the chemical structure</li>
-<li>:-( Relatively insensitive</li>
-<li>:-( Dynamic range</li>
+<li>😀 Reproducible</li>
+<li>😀 Inherently quantitative</li>
+<li>😀 Sensitive to the chemical structure</li>
+<li>😞 Relatively insensitive</li>
+<li>😞 Dynamic range</li>
 </ol>
 
 <h3>LC/GC - MS</h3>
 
 <ol class = 'build'>
-<li>:-) Sensitive</li>
-<li>:-) Universal</li>
-<li>:-) With high dynamic range</li>
-<li>:-( Less reproducible (euphemysm)</li>
+<li>😀 Sensitive</li>
+<li>😀 Universal</li>
+<li>😀 With high dynamic range</li>
+<li>😞 Less reproducible (😉)</li>
 </ol>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Doing Metabolomics</h2></hgroup><article  id="doing-metabolomics">
@@ -3307,15 +3310,17 @@ color: #377eb8;
 
 <p><del>The measured variables are metabolites</del></p>
 
-<p>The numbers we collect is the concentration of the individual metabolites</p>
+<div style="border: 2px solid #e74c3c; background-color: #fdecea; padding: 10px; border-radius: 5px;">
+<p>⚠️ <strong>Warning:</strong> The numbers we collect is the concentration of the individual metabolites.</p></div>
 
 <h3>Untargeted</h3>
 
-<p>We &ldquo;throw&rdquo; a raw extract in our instrument, trying to analyze as much signals as possible. How many things we are able to see is unknown.</p>
+<p>We &ldquo;throw&rdquo; a raw sample in our instrument, trying to analyze as much signals as possible. How many things we are able to see is unknown.</p>
 
 <p><del>The measured variables are <strong>not</strong> metabolites</del></p>
 
-<p>The numbers we get are the peak areas of the individual features</p>
+<div style="border: 2px solid #e74c3c; background-color: #fdecea; padding: 10px; border-radius: 5px;">
+<p>⚠️ <strong>Warning:</strong> The numbers we get are the peak areas of the individual features.</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Why targeted, why untargeted</h2></hgroup><article  id="why-targeted-why-untargeted" class="smaller build">
 
